fix: modernize collection usage, change return and param types, update JavaDoc