@@ -7,7 +7,6 @@ import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javafx.beans.property.SimpleBooleanProperty;
@@ -340,7 +339,7 @@ class JournalAbbreviationsViewModelTabTest {
         ObservableList<Abbreviation> actualAbbreviations = FXCollections
                 .observableArrayList(viewModel.abbreviationsProperty().stream()
                                               .map(AbbreviationViewModel::getAbbreviationObject)
-                                              .collect(Collectors.toList()));
+                                              .toList());
 
         assertEquals(expected, actualAbbreviations);
     }
